--- a/presentation/src/main/res/navigation/nav_project_detail.xml
+++ b/presentation/src/main/res/navigation/nav_project_detail.xml
@@ -33,6 +33,26 @@
             app:exitAnim="@anim/nav_default_exit_anim"
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
             app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+
+        <action
+            android:id="@+id/action_projectDetailContainerFragment_to_nav_project_detail"
+            app:destination="@id/nav_project_detail"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim">
+
+            <argument
+                android:name="project_id"
+                app:argType="long" />
+        </action>
+
+
+        <!--        TODO::수정사항 발생 가능성 있음-->
+        <action
+            android:id="@+id/action_projectDetailContainerFragment_to_projectKickReasonAlertDialog"
+            app:destination="@id/projectKickReasonAlertDialog" />
+
     </fragment>
 
     <dialog
@@ -74,7 +94,7 @@
             android:id="@+id/projectEnrollmentReasonAlertDialog"
             android:name="com.connectcrew.presentation.screen.feature.project.projectintroduction.ProjectEnrollmentReasonAlertDialog"
             android:label="@string/label_dialog"
-            tools:layout="@layout/dialog_project_enrollment_reason"/>
+            tools:layout="@layout/dialog_project_enrollment_reason" />
     </navigation>
 
     <fragment
@@ -86,4 +106,20 @@
             android:name="project_feed_detail"
             app:argType="com.connectcrew.presentation.model.project.ProjectFeedDetail" />
     </fragment>
+
+<!--    <navigation-->
+<!--        android:id="@+id/nav_project_member"-->
+<!--        app:startDestination="@id/projectKickReasonAlertDialog">-->
+
+        <fragment
+            android:id="@+id/projectDetailMemberFragment"
+            android:name="com.connectcrew.presentation.screen.feature.project.projectmember.ProjectDetailMemberFragment"
+            tools:layout="@layout/fragment_project_detail_member"/>
+
+        <dialog
+            android:id="@+id/projectKickReasonAlertDialog"
+            android:name="com.connectcrew.presentation.screen.feature.project.projectmember.ProjectKickReasonAlertDialog"
+            tools:layout="@layout/dialog_project_kick_reason" />
+<!--    </navigation>-->
+
 </navigation>
